--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ android {
     buildFeatures {
         viewBinding true
     }
+    sourceSets {
+        main {
+            assets {
+                srcDirs 'src\\main\\assets', 'src\\main\\assets\\anhsv'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -41,7 +48,7 @@ dependencies {
 //    implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-    
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation files('libs/MPAndroidChart-v3.0.1.jar')
     implementation files('libs/jtds-1.3.1.jar')
     implementation files('libs/sqljdbc42.jar')
